# tujenge_traders

./: .gitignore  manage.py  pyproject.toml
home/: urls.py  views.py
inventory_management/: admin.py  models.py
inventory_management/migrations/: 0001_initial.py  0002_purchaseorderrequest.py  0003_brand_product_brand.py  0004_alter_product_brand.py  0005_alter_product_brand.py
static/assets/bootstrap/css/: bootstrap.min.css
static/assets/css/: style.min.css
static/assets/js/: map.js
templates/NonAuthenticated/: contact-us.html  create-order.html  index.html  layout.html  privacy-policy.html  terms-and-conditions.html
templates/NonAuthenticated/Authentication/: login.html
templates/NonAuthenticated/includes/: footer.html  head.html  navigation.html
tujenge_traders/: asgi.py  settings.py  urls.py  wsgi.py
