[tool.poetry]
name = "tujenge-traders"
version = "0.1.0"
description = ""
authors = ["Fredrick Chami <fredrick.chami@ega.go.tz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-environ = "^0.11.2"
sweetify = "^2.3.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
